--- a/IMS.WebApp/Pages/InventoryList.razor
+++ b/IMS.WebApp/Pages/InventoryList.razor
@@ -1,6 +1,7 @@
 ﻿@page "/inventories"
 
 @inject NavigationManager NavigationManager
+@inject IViewInventoriesByNameUseCase ViewInventoriesByNameUseCase
 
 <h3>Inventory List</h3>
 <br />
@@ -37,7 +38,15 @@
 <button type="button" class="btn btn-primary" @onclick="AddInventory">Add inventory</button>
 
 @code {
-    private List<Inventory> listInventories;
+    private List<Inventory>? listInventories;
+
+    protected override async Task OnInitializedAsync()
+    {
+        var invs = await ViewInventoriesByNameUseCase.ExecuteAsync();
+        this.listInventories = invs.ToList();
+
+    }
+
 
     private void OnSearchInventories(List<Inventory> inventories)
     {
