--- a/IMS.WebApp/Controls/ViewInventoriesComponent.razor
+++ b/IMS.WebApp/Controls/ViewInventoriesComponent.razor
@@ -2,9 +2,16 @@
 @inject IViewInventoriesByNameUseCase ViewInventoriesByNameUseCase
 
 
+<div class="input-group mb-3">
+    <input type="text" class="form-control form-control-lg" placeholder="Type inventory name here to search" @bind-value="inventoryNameToSearch" />
+    <button type="button" class="input-group-text btn-success" @onclick="@( async()=> {await ViewInventories(); })">View</button>
+
+</div>
+
+
 @if (this.DisplaySearhcTesult && _inventories != null && selectedInventory == null)
 {
-    <div style="overflow-y:auto; max-height:300px">
+    <div style="overflow-y:auto; max-height:300px; border:1px solid silver">
         <ul style="list-style-type:none">
             @foreach(var inv in _inventories)
             {
