--- a/IMS.WebApp/Pages/AddProduct.razor
+++ b/IMS.WebApp/Pages/AddProduct.razor
@@ -29,18 +29,7 @@
             <InputNumber id="price" @bind-Value="product.Price" class="form-control"></InputNumber>
         </div>
 
-        <div class="form-group">
-            <label >Inventories</label>
-            <ViewInventoriesComponent
-                DisplaySearhcTesult="true"
-                OnSelectInventory="OnSelectInventory"></ViewInventoriesComponent>
-        </div>
-
-
-        <ul>
-
-            <li></li>
-        </ul>
+        <ProductInventoriesComponent @ref="ProductInventoriesComponent"></ProductInventoriesComponent>
 
         <br />
         <button type="submit" class="btn btn-primary">Save</button>
@@ -51,6 +40,9 @@
 @code {
     private Product? product;
 
+    private ProductInventoriesComponent ProductInventoriesComponent;
+    private ProductInventory
+
     protected override void OnInitialized()
     {
         this.product = new Product();
@@ -60,14 +52,12 @@
     {
         if(this.product != null)
         {
+            //this.product.
+
             await AddProductUseCase.ExecuteAsync(this.product);
             NavigationManager.NavigateTo("/products");
         }
     }
 
-    private void OnSelectInventory(Inventory inventory)
-    {
-        
-    }
 
 }
